<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Calendar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="alert_message">Alert</string>
    <string name="settings">Settings</string>
    <string name="choose_different_account" tools:keep="@string/choose_different_account">Choose different account</string>
    <string name="log_out">Log Out</string>
    <string name="google_signIn_txt" tools:keep="@string/google_signIn_txt">One Tap Sign In with Google</string>
    <string name="app_name_txt" tools:keep="@string/app_name_txt">My Calendar</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="my_calendar">My Calendar</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="no_date_picked">No Date Picked</string>
    <string name="enter_event_task_name">Enter event/task name</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="enter_location_venue">Enter location/venue</string>
    <string name="submit">Submit</string>
    <string name="one_tap_sign_in_with_google">One Tap Sign In with Google</string>
    <string name="task_name">Task Name</string>
    <string name="st">ST</string>
    <string name="et">ET</string>
    <string name="venue">Venue</string>
    <string name="search" tools:keep="@string/search">Search</string>
    <string name="add_button">Add Button</string>
    <string name="note_do_not_use_same_account_for_google_sign_in_and_email_address_sign_in_this_may_lead_to_data_loss"><strong>Note</strong>: Do not use same account for Google Sign In and Email Address Sign In. This may lead to data loss.</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="about">About</string>
</resources>