<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg_3"
    android:padding="10dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/myTaskName"
        android:text="@string/task_name"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:autoLink="all"
        android:textColorLink="#FFFFFF"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/myTaskStartTime"
        android:text="@string/st"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toStartOf="@id/myTaskEndTime"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/myTaskEndTime"
        android:text="@string/et"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/myTaskVenue"
        android:text="@string/venue"
        android:textSize="18sp"
        android:autoLink="all"
        android:textColorLink="#FFFFFF"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myTaskName"
        android:layout_marginTop="10dp"
        />

    <ImageButton
        android:id="@+id/updateTask"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:background="@null"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteTask"
        android:src="@drawable/ic_baseline_edit_24"
        tools:ignore="ContentDescription" />


    <ImageButton
        android:id="@+id/deleteTask"
        android:layout_width="33dp"
        android:layout_height="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_delete_24"
        tools:ignore="ContentDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>