<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAF7FF"
    android:padding="16dp"
    android:id="@+id/drawerLayout"
    tools:context=".ui.ActivityHome">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/my_calendar"
            android:textSize="35sp"
            android:padding="5dp"
            android:letterSpacing="0.03"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <ImageButton
            android:id="@+id/navBar_button"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="center"
            android:layout_marginTop="6.6dp"
            android:layout_marginEnd="6.6dp"
            android:background="@drawable/layout_bg"
            android:src="@drawable/ic_baseline_menu_open_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.95"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            android:dateTextAppearance="@style/CustomCalendarDay"
            android:theme="@style/CustomCalendarMonth"
            android:weekDayTextAppearance="@style/CustomCalendarWeek"
            />



        <ProgressBar
            android:id="@+id/progressBarTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <TextView
            android:id="@+id/tasksDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/tasks_menu_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addTaskBtn"
            app:layout_constraintTop_toBottomOf="@+id/tasksDate" />

        <ImageButton
            android:id="@+id/addTaskBtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_bg_2"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_button" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_marginTop="75dp"
        android:padding="10dp"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/nav_menu"
        android:visibility="visible"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        />


</androidx.drawerlayout.widget.DrawerLayout>